# cities-temperatures

./: .gitignore  pyproject.toml
datasets/: cities.csv  cities1_old.csv  cities2_old.csv  cities3_old.csv  cities4_old.csv  cities5_old.csv  cities6_old.csv  cities7_old.csv  cities8_old.csv  cities9_old.csv  cities_old.csv  majorCities.csv
project/: utils.py  visualization.py  web_app.py
project/.streamlit/: config.toml
weatherProject/: pyproject.toml
weatherProject/weatherproject/: utils.py  visualization.py  web_app.py
