[tool.poetry]
name = "project"
version = "0.1.0"
description = "Project for the DS coding class"
authors = ["lucasangio01 <luca.sangiovanni.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.0"
plotly-express = "^0.4.1"
matplotlib = "^3.8.0"
countryinfo = "^0.1.2"
streamlit = "^1.28.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
opencage = "^2.4.0"
seaborn = "^0.13.2"
geopy = "^2.4.1"
streamlit-option-menu = "^0.3.12"
requests = "^2.31.0"
jupyter = "^1.0.0"
python-dotenv = "^1.1.1"
kaggle = "^1.7.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
