[tool.poetry]
name = "weatherproject"
version = "0.1.0"
description = "Project for the DS coding class"
authors = ["lucasangio01 <luca.sangiovanni.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
geopandas = "^0.14.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly-express = "^0.4.1"
streamlit = "^1.33.0"
streamlit-option-menu = "^0.3.12"
countryinfo = "^0.1.2"
geopy = "^2.4.1"
opencage = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
